--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -11,14 +11,47 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        build_type: [Release]
+        c_compiler: [gcc, clang, cl]
+        install_prefix: /usr
+        include:
+        - os: windows-latest
+          c_compiler: cl
+        - os: ubuntu-latest
+          c_compiler: gcc
+        - os: ubuntu-latest
+          c_compiler: clang
+        - os: macos-latest
+          c_compiler: gcc
+        - os: macos-latest
+          c_compiler: clang
+        exclude:
+        - os: windows-latest
+          c_compiler: gcc
+        - os: windows-latest
+          c_compiler: clang
+        - os: ubuntu-latest
+          c_compiler: cl
+        - os: macos-latest
+          c_compiler: cl
 
     runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v4
-    - name: Setup Zig
-      uses: mlugg/setup-zig@v1
-      with:
-        version: latest
-    - name: Run Test
-      run: zig run test.c -I lib -lc
+
+    - name: Configure cmake using ${{ matrix.c_compiler }}
+      run: >
+        cmake 
+        -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
+        -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+        -DCMAKE_INSTALL_PREFIX=${{ matrix.install_prefix }}  
+    - name: Build library
+      run: cmake . -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} && make
+    - name: Test library
+      run: |
+       cmake --build test -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+       ./test/test
+    - name: Test installation
+      if: ${{ contains(matrix.os, "ubuntu") }}
+      run: make install
