--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -5,7 +5,8 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
+env:
+  INSTALL_PREFIX: /usr
 jobs:
   build_test:
     strategy:
@@ -13,7 +14,6 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
         build_type: [Release]
         c_compiler: [gcc, clang, cl]
-        install_prefix: /usr
         include:
         - os: windows-latest
           c_compiler: cl
@@ -45,7 +45,7 @@ jobs:
         cmake 
         -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-        -DCMAKE_INSTALL_PREFIX=${{ matrix.install_prefix }}  
+        -DCMAKE_INSTALL_PREFIX=$INSTALL_PREFIX  
     - name: Build library
       run: cmake . -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} && make
     - name: Test library
@@ -53,5 +53,5 @@ jobs:
        cmake --build test -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
        ./test/test
     - name: Test installation
-      if: ${{ contains(matrix.os, "ubuntu") }}
+      if: ${{ contains(matrix.os, 'ubuntu') }}
       run: make install
