--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -48,10 +48,10 @@ jobs:
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
         -DCMAKE_INSTALL_PREFIX=$INSTALL_PREFIX  
     - name: Build library
-      run: cmake . -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} && make
+      run: cmake . && make
     - name: Test library
       run: |
-       cmake --build test -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+       cmake --build test --config ${{ matrix.build_type }}
        ./test/test
     - name: Test installation
       if: ${{ contains(matrix.os, 'ubuntu') }}
