--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -43,10 +43,16 @@ jobs:
 
     - name: Configure cmake using ${{ matrix.c_compiler }}
       run: >
-        cmake 
+        cmake
+        -S ${{ github.workspace }}
         -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
         -DCMAKE_INSTALL_PREFIX=$INSTALL_PREFIX  
+        cmake
+        -S ${{ github.workspace }}/test
+        -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
+        -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+        
     - name: Build library
       run: cmake . && make
     - name: Test library
