--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -48,8 +48,9 @@ jobs:
         -DCMAKE_C_COMPILER=${{ matrix.c_compiler }} \
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
         -DCMAKE_INSTALL_PREFIX=$INSTALL_PREFIX  
+        cd test
         cmake \
-        -S ${{ github.workspace }}/test \
+        -S . \
         -DCMAKE_C_COMPILER=${{ matrix.c_compiler }} \
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
         
