--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -64,4 +64,4 @@ jobs:
        ./test/test
     - name: Test installation
       if: ${{ contains(matrix.os, 'ubuntu') }}
-      run: make install
+      run: sudo make install
