--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -44,6 +44,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Configure cmake using ${{ matrix.c_compiler }}
+      shell: bash
       run: |
         cmake \
         -S ${{ github.workspace }} \
