--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -58,7 +58,7 @@ jobs:
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
         
     - name: Build library
-      run: cmake . && make
+      run: cmake --build . --config ${{ matrix.build_type }}
     - name: Test library
       run: |
        cmake --build test --config ${{ matrix.build_type }}
