--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -12,6 +12,7 @@ jobs:
   build_test:
     permissions:
       contents: write
+
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
@@ -59,10 +60,19 @@ jobs:
         
     - name: Build library
       run: cmake --build . --config ${{ matrix.build_type }}
-    - name: Test library
-      run: |
-       cmake --build test --config ${{ matrix.build_type }}
-       ./test/test
+
+    - name: Build test binary
+      run: cmake --build test --config ${{ matrix.build_type }}
+
+    - name: Test library on non-windows
+      if: ${{ !contains(matrix.os, 'windows')}}
+      run: ./test/test
+
+    - name: Test library on windows
+      if: ${{ contains(matrix.os, 'windows')}}
+      shell: bash
+      run: ./test/Release/test.exe
+
     - name: Test installation
       if: ${{ contains(matrix.os, 'ubuntu') }}
       run: sudo make install
