--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -5,20 +5,74 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+env:
+  INSTALL_PREFIX: /usr
 
 jobs:
   build_test:
+    permissions:
+      contents: write
+
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        build_type: [Release]
+        c_compiler: [gcc, clang, cl]
+        include:
+        - os: windows-latest
+          c_compiler: cl
+        - os: ubuntu-latest
+          c_compiler: gcc
+        - os: ubuntu-latest
+          c_compiler: clang
+        - os: macos-latest
+          c_compiler: gcc
+        - os: macos-latest
+          c_compiler: clang
+        exclude:
+        - os: windows-latest
+          c_compiler: gcc
+        - os: windows-latest
+          c_compiler: clang
+        - os: ubuntu-latest
+          c_compiler: cl
+        - os: macos-latest
+          c_compiler: cl
 
     runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v4
-    - name: Setup Zig
-      uses: mlugg/setup-zig@v1
-      with:
-        version: latest
-    - name: Run Test
-      run: zig run test.c -I lib -lc
+
+    - name: Configure CMake using ${{ matrix.c_compiler }}
+      shell: bash
+      run: |
+        cmake \
+        -S . \
+        -DCMAKE_C_COMPILER=${{ matrix.c_compiler }} \
+        -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
+        -DCMAKE_INSTALL_PREFIX=$INSTALL_PREFIX  
+        cd test
+        cmake \
+        -S . \
+        -DCMAKE_C_COMPILER=${{ matrix.c_compiler }} \
+        -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+        
+    - name: Build library
+      run: cmake --build . --config ${{ matrix.build_type }}
+
+    - name: Build test binary
+      run: cmake --build test --config ${{ matrix.build_type }}
+
+    - name: Test library on non-windows
+      if: ${{ !contains(matrix.os, 'windows')}}
+      run: ./test/test
+
+    - name: Test library on windows
+      if: ${{ contains(matrix.os, 'windows')}}
+      shell: bash
+      run: ./test/Release/test.exe
+
+    - name: Test installation
+      if: ${{ contains(matrix.os, 'ubuntu') }}
+      run: sudo make install
