--- a/.gitignore
+++ b/.gitignore
@@ -51,9 +51,13 @@ Module.symvers
 Mkfile.old
 dkms.conf
 
-# zig build 
-zig-out
-.zig-cache
-
 # editor
 *.swp
+
+# cmake
+**/build
+**/cmake_install.cmake
+**/CMakeFiles
+**/CMakeCache.txt
+**/Makefile
+test/test
