--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,8 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 
-PROJECT(TEST)
-INCLUDE_DIRECTORIES(..)
-LINK_DIRECTORIES(../build)
+INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)
+LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/lib)
 ADD_EXECUTABLE(test test.c)
 
 TARGET_LINK_LIBRARIES(test sum)
