--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -43,19 +43,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-
-    - name: Configure CMake using ${{ matrix.c_compiler }}
-      shell: bash
+        
+    - name: Build library using ${{ matrix.c_compiler }}
       run: |
         mkdir build
         cd build
-        cmake \
+        cmake .. \
         -DCMAKE_C_COMPILER=${{ matrix.c_compiler }} \
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
         -DCMAKE_INSTALL_PREFIX=$INSTALL_PREFIX  
-        
-    - name: Build library
-      run: cmake --build build --config ${{ matrix.build_type }}
 
     - name: Test library on non-windows
       if: ${{ !contains(matrix.os, 'windows')}}
