--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -53,11 +53,13 @@ jobs:
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
         -DCMAKE_INSTALL_PREFIX=$INSTALL_PREFIX  
 
-    - name: Test library on non-windows
+    - name: Test library on ${{ matrix.os }}
       if: ${{ !contains(matrix.os, 'windows')}}
-      run: ./build/test/test
+      run: |
+        pwd
+        ./build/test/test
 
-    - name: Test library on windows
+    - name: Test library on ${{ matrix.os }}
       if: ${{ contains(matrix.os, 'windows')}}
       shell: bash
       run: ./build/test/Release/test.exe
