--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -51,15 +51,14 @@ jobs:
         cmake .. \
         -DCMAKE_C_COMPILER=${{ matrix.c_compiler }} \
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
-        -DCMAKE_INSTALL_PREFIX=$INSTALL_PREFIX  
+        -DCMAKE_INSTALL_PREFIX=$INSTALL_PREFIX
+        make
 
-    - name: Test library on ${{ matrix.os }}
+    - name: Test library on non-windows 
       if: ${{ !contains(matrix.os, 'windows')}}
-      run: |
-        ls build/test
-        ./build/test/test
+      run: ./build/test/test
 
-    - name: Test library on ${{ matrix.os }}
+    - name: Test library on windows
       if: ${{ contains(matrix.os, 'windows')}}
       shell: bash
       run: ./build/test/Release/test.exe
