--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -45,6 +45,7 @@ jobs:
     - uses: actions/checkout@v4
         
     - name: Build library using ${{ matrix.c_compiler }}
+      shell: bash
       run: |
         mkdir build
         cd build
